fixing team modal on mobile

--- a/public/static/less/style.less
+++ b/public/static/less/style.less
@@ -13,7 +13,7 @@
 @import '../../startup/ui-kit/ui-kit-projects/less/project-common.less';
 @import '../../startup/ui-kit/ui-kit-projects/less/project-3.less';
 @import '../../startup/ui-kit/ui-kit-footer/less/footer-7.less';
-
+@import '../../startup/ui-kit/ui-kit-footer/less/footer-4.less';
 
 /* header modification */
 
@@ -86,4 +86,25 @@ and (max-device-width : 568px)  {
 .loaded .header-6 .navbar {
 	top: 45px;
 }
+}
+
+.crew-2 {
+	padding-top:50px;
+	.members {
+		width:67%;
+		margin: auto;
+		.member {
+			width:190px;
+		}	
+		.photo-wrapper {
+		width: 190px;
+		height: 190px;
+		margin:auto;
+
+	}
+	}
+
+}
+.footer-4 .brand {
+font-size: 27px;
 }
